7033141: assert(has_cp_cache(i)) failed: oob

Unrewrite bytecodes for OOM error allocating the constant pool cache.

Reviewed-by: dcubed, acorn, never